...
      />
      <Animated.View
        style={[styles.sheet, animatedStyle]}
        testID="bottom-sheet"
      >
        <View {...panResponder.panHandlers} style={styles.dragHandleArea}>
          <View style={styles.dragHandle} testID="drag-handle" />
        </View>
        <View style={styles.content}>{children}</View>
      </Animated.View>
    </>
  );
}
...
